src/app/view/dialogs/trainrun-and-section-dialog/trainrun-and-section-dialog.component.scss
@use "../../dialogs/trainrun-and-section-dialog/trainrunsection-tab/trainrun-section-tab.component.scss";

::ng-deep #TrainrunTabViewDialogId {
  border: none;
  box-shadow: none;
  background-color: transparent;
}

::ng-deep .trainrun-dialog-container {
  position: relative;
  padding-top: 4px; // optical alignment
  border: 1px solid var(--sbb-menu-item-label);
  min-height: 385px;
  max-height: 385px;
  background-color: var(--sbb-header-lean-background-color);

  &:before,
  &:after {
    border: 16px solid transparent;
    border-top-color: var(--sbb-menu-item-label);
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    width: 0;
    height: 0;
  }

  &:after {
    margin-top: -0.75px;
    border-top-color: var(--sbb-header-lean-background-color);
  }

  .trainrun-dialog-tab-group {
    padding: 15px;
    cursor: move;
    width: 630px;
  }

  .sbb-tab-group-content {
    border-left: none !important;
    border-right: none !important;
    border-bottom: none !important;
    padding-bottom: 0 !important;
  }

  .sbb-dialog-content {
    padding-top: 0;
  }

  .sbb-dialog-actions {
    padding-bottom: 0;
  }

  .sbb-tab-body {
    padding-right: 0;
    padding-left: 0;
    padding-bottom: 0;
  }

  .sbb-tab-labels::after {
    cursor: move;
  }

  .closeDialog {
    position: absolute;
    align-self: end;
    padding: 10px 15px;
    z-index: 1001;
  }

  .sbb-tab-body-wrapper {
    cursor: default;
  }
}

.dialog-close-button-layer {
  transform: translate(620px, 1px);
  position: absolute;
  width: 10px;
  height: 53px;
  border: 5px solid var(--sbb-header-lean-background-color);
  background-color: var(--sbb-header-lean-background-color);
  cursor: pointer;
}

.dialog-close-button-icon {
  transform: translate(-14px, -60px);
}

.dialog-close-button-icon:hover {
  color: #eb0000;
}

.dialog-drag-and-close-handle-area {
  transform: translate(616px, 58px);
  position: absolute;
  width: 20px;
  height: 326px;
  border: 16px solid var(--sbb-header-lean-background-color);
  cursor: move;

  .dialog-drag-handle-icon {
    transform: translate(-12px, 230px);
    pointer-events: none;
    opacity: 0.25;
  }
}

.dialog-drag-and-close-handle-area:hover {
  .dialog-drag-handle-icon {
    transform: translate(-12px, 230px);
    pointer-events: none;
  }
}

.dialog-drag-and-close-handle-area:active {
  border: 116px solid rgba(0, 0, 0, 0);

  .dialog-drag-handle-icon {
    transform: translate(-112px, 130px);
    pointer-events: none;
  }

  .dialog-close-button-icon {
    transform: translate(-114px, -160px);
  }
}

.sbb-tab-group {
  user-select: none;
}

